--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@turf/turf": "^6.5.0",
     "antd": "^5.12.5",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
-    "oidc-client-ts": "^2.4.0",
+    "mapbox-gl": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.7",
     "react-oidc-context": "^2.3.1",
     "react-router-dom": "^6.21.1"
   },
